ingress-rancher.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  
  rules:
  - host: rancher.anaeleboo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
  tls:
  - hosts:
    - rancher.anaeleboo.com
    secretName: app-secret-rancher
